[package]
name = "ft3168"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
fugit = "0.3.7"
heapless = "0.8.0"
nalgebra = { version = "0.33.2", default-features = false }
nb = "1.1.0"
ux = "0.1.6"
