[package]
name = "icna3311"
version = "0.1.0"
authors = ["artur.peixoto <arturokfya@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
# esp-backtrace = { version = "0.14.2", features = [
#     "esp32s3",
#     "exception-handler",
#     "panic-handler",
#     "println",
# ] }
# esp-hal = { version = "0.21.0", features = [ "esp32s3" ] }
# esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
fixed = "1.28.0"
# log = { version = "0.4.22" }
pipe = { git = "https://github.com/artpeixoto/pipe", rev = "f0178a7e"}

# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units = 1 # LLVM can perform better optimizations using a single thread
# debug = 2
# debug-assertions = false
# incremental = false
# lto = 'fat'
# opt-level = 's'
# overflow-checks = false
